# ADOS

./: .gitignore
dev-agent-system/: .env.example  .gitignore  pyproject.toml  requirements.txt  test_workspace_debug.py  validate_system.py
dev-agent-system/config/: agents.yaml  config_loader.py  crews.yaml  default_config.yaml
dev-agent-system/crews/backend/: backend_crew.py  crew_config.yaml
dev-agent-system/crews/backend/kb/: fastapi_patterns.md
dev-agent-system/crews/deployment/: crew_config.yaml
dev-agent-system/crews/deployment/kb/: docker_best_practices.md
dev-agent-system/crews/frontend/: crew_config.yaml
dev-agent-system/crews/frontend/kb/: accessibility.md  react_patterns.md
dev-agent-system/crews/integration/: crew_config.yaml
dev-agent-system/crews/integration/kb/: cicd_pipelines.md
dev-agent-system/crews/orchestrator/: crew_config.yaml  orchestrator_crew.py
dev-agent-system/crews/orchestrator/kb/: system_design.md  task_decomposition.md
dev-agent-system/crews/quality/: crew_config.yaml
dev-agent-system/crews/quality/kb/: testing_frameworks.md
dev-agent-system/crews/security/: crew_config.yaml  security_crew.py
dev-agent-system/crews/security/kb/: owasp_guidelines.md
dev-agent-system/dev-agent-system/workspace/backend/: runtime.md
dev-agent-system/orchestrator/: __init__.py  agent_factory.py  crew_factory.py  logging_service.py  main.py  memory_coordinator.py  performance_monitor.py  task_decomposer.py
dev-agent-system/runner/: __init__.py  main.py
dev-agent-system/runner/commands/: __init__.py  init.py  run.py  status.py  version.py
dev-agent-system/runner/utils/: __init__.py  config.py  logger.py
dev-agent-system/tests/: PHASES_1_TO_3_1_TEST_RESULTS.md  __init__.py  minimal_test.py  test_backend_crew_e2e.py  test_backend_crew_integration.py  test_backend_crew_unit.py  test_cli.py  test_config_loader.py  test_end_to_end.py  test_full_config.py  test_logging_infrastructure.py  test_logging_integration.py  test_memory_coordinator.py  test_memory_integration.py  test_orchestrator.py  test_orchestrator_crew_implementation.py  test_orchestrator_integration.py  test_phase_3_1_comprehensive.py  test_phase_3_1_e2e_tests.py  test_phase_3_1_integration_tests.py  test_phase_3_1_simple.py  test_phase_3_1_unit_tests.py  test_phases_1_to_3_1_comprehensive.py  test_phases_1_to_3_1_comprehensive_fixed.py  test_security_crew_e2e.py  test_security_crew_integration.py  test_security_crew_unit.py  test_task_decomposer.py  test_validation_suite.py  test_workspace_config.py
dev-agent-system/tests/validators/: __init__.py  agent_protocol.py  cli_commands.py  config_validation.py  directory_structure.py  knowledge_base.py
dev-agent-system/tools/: backend_tools.py  memory_writer.py  orchestrator_tools.py  prd_parser.py  security_tools.py  system_monitor.py  task_decomposer.py
dev-agent-system/tools/logging/: __init__.py  crew_logger.py  formatters.py  handlers.py
dev-agent-system/workspace/: activeContext.md  progress.md  techContext.md  todo.md
dev-agent-system/workspace/backend/: runtime.md
dev-agent-system/workspace/deployment/: runtime.md
dev-agent-system/workspace/frontend/: runtime.md
dev-agent-system/workspace/integration/: runtime.md
dev-agent-system/workspace/orchestrator/: runtime.md
dev-agent-system/workspace/quality/: runtime.md
dev-agent-system/workspace/security/: runtime.md
